<resources>
    <string name="app_name">Lichess by Voice</string>
    <string name="help_button">About / Help</string>
    <string name="help_textview"><![CDATA[
        <h3>What is Lichess?</h3>
        <p>lichess.org is a cost-free, ad-free chess server. Lichess, as well as this app, is Open Source.</p>
        <h3>What does the app do?</h3>
        <p>It connects to your Lichess account (you can create one too). In this version, having opened a game, you are enabled to speak moves in the English language to play the game displayed. You can view this game on this device or open the game on other devices to get a larger picture. Other languages are planned.</>
        <h3>How to play by voice</h3>
        <p><ul><li>Use long algebraic notation. Examples: <b>e2e4</b>, <b>g8f6</b>.</li>
        <li>For castling specify the King move. Examples: <b>e1g1</b> or <b>e8c8</b>.</li>
            <li>Promoting a pawn on last rank, you add the name of the piece. Examples: <b>a7a8 Queen</b> or <b>b2b1 Rook</b>. Omitting the piece will make it a Queen.</li></ul></p>
        <h3>Continuing a game</h3>
        <p>In this version you can continue the game in your Lichess ongoing game list that has waited the longest. Choosing from the list will be implemented in a later version.</p>
        <h3>Privacy</h3>
        <p>No audio samples are saved to media or transferred over the net. Usage of a specific chess grammar ensures that every recognition result that is not a chess move is ignored by the app.
        The relevant source code is in de.lichessbyvoice.chess.ChessGrammar and …TextFilter</p>]]>
    </string>
    <string name="about_textview">Lichess By Voice---Version: XXX_VERSION_XXX</string>
    <string name="main_button">New Game</string>
    <string name="privacy_button">Privacy</string>
    <string name="lastgame_button">Continue Suspended Game</string>
    <string name="account_button">Create/Link Account</string>
    <string name="no_token">Lichess access token not available in app. Please link your Lichess account or create a new one.</string>
    <string name="newgame_title">Play with the computer</string>
    <string name="newgame_variant">Standard</string>
    <string name="newgame_variant2">Chess960</string>
    <string name="newgame_color_white">white</string>
    <string name="newgame_color_black">black</string>
    <string name="newgame_color_random">random color</string>
    <string name="newgame_strength_1">1</string>
    <string name="newgame_strength_2">2</string>
    <string name="newgame_strength_3">3</string>
    <string name="newgame_strength_4">4</string>
    <string name="newgame_strength_5">5</string>
    <string name="newgame_strength_6">6</string>
    <string name="newgame_strength_7">7</string>
    <string name="newgame_strength_8">8</string>
    <string name="newgame_text_strength">Strength</string>
    <string name="newgame_text_start">Start game with</string>
    <string name="mic_permission_alert">Need permission to record audio</string>
    <string name="mic_permission_alert_text">Without audio permission Lichess by Voice will not know what move to make. If you previously denied this permission you may need to reset it yourself in your device\'s app settings</string>
    <string name="exit_app_button">Exit app</string>
    <string name="null_model_alert">Speech model initialization failed</string>
    <string name="null_model_alert_text">Please report at https://github.com/rwst/Lichess-by-Voice/issues</string>
    <string name="game_finished_alert">Game finished</string>
    <string name="game_finished_alert_text_mate">Reason: Checkmate</string>
    <string name="game_finished_alert_text_draw">Reason: Draw</string>
    <string name="game_finished_alert_text_resign">Reason: Resign</string>
    <string name="no_connection_alert">No Connection</string>
    <string name="no_connection_alert_text">Could not connect to lichess.org. Do you have internet?</string>
    <string name="back_button">Back</string>
    <string name="textview">TextView</string>
</resources>